# manual-library-integration-scons

./: .gitignore  README.md  SConstruct
src/: helloworld.cpp
sumlib/: CMakeLists.txt  sumlib.cpp  sumlib.hpp
